[package]
name = "dll-deps"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Recursive Windows DLL dependency walker — replaces the abandoned Dependency Walker."
repository = "https://github.com/AuDowty/dll-deps"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
